--- a/wallboard-example.html
+++ b/wallboard-example.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <title>Amazon Connect Wallboard</title>
+  <title>Service Desk Sweden</title>
   <script language="javascript">
    /*
     * Set API Gateway invoke URL in the following line.
